--- a/Lecture15/Makefile
+++ b/Lecture15/Makefile
@@ -1,7 +1,7 @@
 # Author: Matthew Morrison
 # E-mail: matt.morrison@nd.edu
 #
-# This is the Makefile for the CSE 20312 course - Lecture 15
+# This is the Makefile for the CSE 20312 course - Lecture 14
 
 # G++ is for the GCC compiler for C++
 PP := g++
@@ -11,77 +11,47 @@ FLAGS := -O0 -g -Wall -Wextra -Wconversion -Wshadow -pedantic -Werror
 CFLAGS := -std=c11 $(FLAGS)
 CXXFLAGS := -m64 -std=c++11 -Weffc++ $(FLAGS) 
 
-# Variables for Folders
+# Variables for Folder
 INC := include
 SRC := src
 EXE := exe
 OBJ := obj
 
 
-# Command: make RemoveDups
-# Solution to Problem 1 from Lecture 20
-RemoveDupsObjs :=  $(OBJ)/RemoveDups.o
+# Command: make DLLTest
+# Doubly Linked List Class Example with int
+DLLTestObjs :=  $(OBJ)/DLLTest.o
 
-RemoveDups: $(RemoveDupsObjs)
-	$(PP) $(CXXFLAGS) -o $(EXE)/RemoveDups $(RemoveDupsObjs)
-	$(EXE)/./RemoveDups 10 22 18 22 15 18 22 10 96 8
-	$(EXE)/./RemoveDups 10 25 12 44 22 106
+DLLTest: $(DLLTestObjs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/DLLTest $(DLLTestObjs)
+	$(EXE)/./DLLTest 10 25 12 10 44 88
 
-$(OBJ)/RemoveDups.o: $(SRC)/RemoveDups.cpp $(INC)/DLList.h
-	$(PP) $(CXXFLAGS) -c $(SRC)/RemoveDups.cpp -o $@
-	
-
-
-# Command: make nthToLast
-# Solution to Problem 2 from Lecture 20
-nthToLastObjs :=  $(OBJ)/nthToLast.o
-
-nthToLast: $(nthToLastObjs)
-	$(PP) $(CXXFLAGS) -o $(EXE)/nthToLast $(nthToLastObjs)
-	$(EXE)/./nthToLast 10 18 22 24 31 9 18
-	$(EXE)/./nthToLast 10 18 22
-	$(EXE)/./nthToLast 10 18
-	$(EXE)/./nthToLast
-
-$(OBJ)/nthToLast.o: $(SRC)/nthToLast.cpp $(INC)/SLList.h
-	$(PP) $(CXXFLAGS) -c $(SRC)/nthToLast.cpp -o $@	
-	
-
-
-# Command: make findCircular
-# Solution to Problem 3 from Lecture 20
-findCircularObjs :=  $(OBJ)/findCircular.o
-
-findCircular: $(findCircularObjs)
-	$(PP) $(CXXFLAGS) -o $(EXE)/findCircular $(findCircularObjs)
-	$(EXE)/./findCircular
-
-$(OBJ)/findCircular.o: $(SRC)/findCircular.cpp
-	$(PP) $(CXXFLAGS) -c $(SRC)/findCircular.cpp -o $@
+$(OBJ)/DLLTest.o: $(SRC)/DLLTest.cpp $(INC)/DLList.h
+	$(PP) $(CXXFLAGS) -c $(SRC)/DLLTest.cpp -o $@
 	
 	
 	
-# Command: make findCircular2
-# Solution to Problem 3 from Lecture 20
-findCircular2Objs :=  $(OBJ)/findCircular2.o
+# Command: make DLLTest2
+# Doubly Linked List Class Example with std::string
+DLLTest2Objs :=  $(OBJ)/DLLTest2.o
 
-findCircular2: $(findCircular2Objs)
-	$(PP) $(CXXFLAGS) -o $(EXE)/findCircular2 $(findCircular2Objs)
-	$(EXE)/./findCircular2
+DLLTest2: $(DLLTest2Objs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/DLLTest2 $(DLLTest2Objs)
+	$(EXE)/./DLLTest2
 
-$(OBJ)/findCircular2.o: $(SRC)/findCircular2.cpp
-	$(PP) $(CXXFLAGS) -c $(SRC)/findCircular2.cpp -o $@
+$(OBJ)/DLLTest2.o: $(SRC)/DLLTest2.cpp $(INC)/DLList.h
+	$(PP) $(CXXFLAGS) -c $(SRC)/DLLTest2.cpp -o $@
 
 
 # make initialize
 # Will be called by grader to initialize your objects and executables folders
 
 initialize: 
-	mkdir objects executables	
+	mkdir objects executables
 
 
 # Make all
-all: RemoveDups nthToLast findCircular findCircular2
+all: DLLTest DLLTest2
 
 # Make clean
 clean :
