--- a/Lecture14/Makefile
+++ b/Lecture14/Makefile
@@ -1,46 +1,47 @@
 # Author: Matthew Morrison
 # E-mail: matt.morrison@nd.edu
 #
-# This is the Makefile for the CSE 20312 course - Lecture 14
+# This is the Makefile for the CSE 20312 - Lecture 13
 
 # G++ is for the GCC compiler for C++
 PP := g++
 
-# CFLAGS are the compiler flages for when we compile C code in this course 
+# CXXFLAGS are the compiler flages for when we compile C++ code in this course 
 FLAGS := -O0 -g -Wall -Wextra -Wconversion -Wshadow -pedantic -Werror 
-CFLAGS := -std=c11 $(FLAGS)
-CXXFLAGS := -m64 -std=c++11 -Weffc++ $(FLAGS) 
+CXXFLAGS := -m64 -std=c++11 -Weffc++ $(FLAGS)
 
-# Variables for Folder
+# Variables for Folders
 INC := include
 SRC := src
-EXE := exe
 OBJ := obj
+EXE := exe
 
 
-# Command: make DLLTest
-# Doubly Linked List Class Example with int
-DLLTestObjs :=  $(OBJ)/DLLTest.o
+# Command: make SLLTest
+SLLTestObjs := $(OBJ)/SLLTest.o
 
-DLLTest: $(DLLTestObjs)
-	$(PP) $(CXXFLAGS) -o $(EXE)/DLLTest $(DLLTestObjs)
-	$(EXE)/./DLLTest 10 25 12 10 44 88
+SLLTest: $(SLLTestObjs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/SLLTest $(SLLTestObjs)
 
-$(OBJ)/DLLTest.o: $(SRC)/DLLTest.cpp $(INC)/DLList.h
-	$(PP) $(CXXFLAGS) -c $(SRC)/DLLTest.cpp -o $@
+$(OBJ)/SLLTest.o: $(SRC)/SLLTest.cpp $(INC)/SLList.h
+	$(PP) $(CXXFLAGS) -c $(SRC)/SLLTest.cpp -o $@
+
+
+
+# Command: make SLLTest2
+SLLTest2Objs := $(OBJ)/SLLTest2.o
+
+SLLTest2: $(SLLTest2Objs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/SLLTest2 $(SLLTest2Objs)
+	$(EXE)/./SLLTest2
+
+$(OBJ)/SLLTest2.o: $(SRC)/SLLTest2.cpp $(INC)/SLList.h
+	$(PP) $(CXXFLAGS) -c $(SRC)/SLLTest2.cpp -o $@
+
 	
-	
-	
-# Command: make DLLTest2
-# Doubly Linked List Class Example with std::string
-DLLTest2Objs :=  $(OBJ)/DLLTest2.o
 
-DLLTest2: $(DLLTest2Objs)
-	$(PP) $(CXXFLAGS) -o $(EXE)/DLLTest2 $(DLLTest2Objs)
-	$(EXE)/./DLLTest2
-
-$(OBJ)/DLLTest2.o: $(SRC)/DLLTest2.cpp $(INC)/DLList.h
-	$(PP) $(CXXFLAGS) -c $(SRC)/DLLTest2.cpp -o $@
+# Make all
+all: countSort1 countSort1
 
 
 # make initialize
@@ -48,10 +49,6 @@ $(OBJ)/DLLTest2.o: $(SRC)/DLLTest2.cpp $(INC)/DLList.h
 
 initialize: 
 	mkdir objects executables
-
-
-# Make all
-all: DLLTest DLLTest2
 
 # Make clean
 clean :
