--- a/Lab06/Makefile
+++ b/Lab06/Makefile
@@ -25,6 +25,29 @@ Alien: $(AlienObjs)
 $(OBJ)/Alien.o: $(SRC)/Alien.cpp $(INC)/Graph.h
 	$(PP) $(CXXFLAGS) -c $(SRC)/Alien.cpp -o $@
 
+
+# Command: make Alien2
+Alien2Objs := $(OBJ)/Alien2.o 
+
+Alien2: $(Alien2Objs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/Alien2 $(Alien2Objs)
+	$(EXE)/./Alien2
+
+$(OBJ)/Alien2.o: $(SRC)/Alien2.cpp $(INC)/Graph.h
+	$(PP) $(CXXFLAGS) -c $(SRC)/Alien2.cpp -o $@
+
+
+
+# Command: make Alien3
+Alien3Objs := $(OBJ)/Alien3.o 
+
+Alien3: $(Alien3Objs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/Alien3 $(Alien3Objs)
+	$(EXE)/./Alien3
+
+$(OBJ)/Alien3.o: $(SRC)/Alien3.cpp $(INC)/Graph.h
+	$(PP) $(CXXFLAGS) -c $(SRC)/Alien3.cpp -o $@
+	
 	
 
 # make initialize
@@ -34,7 +57,7 @@ initialize:
 
 
 # Make all
-all: Alien
+all: Alien Alien2
 
 
 # Make clean
