--- a/Lecture38/Makefile
+++ b/Lecture38/Makefile
@@ -1,4 +1,4 @@
-# This is the Makefile for the CSE 20312 course - Lecture 38
+# This is the Makefile for the CSE 20312 course - Lecture 36
 
 # G++ is for the GCC compiler for C++
 PP := g++
@@ -15,48 +15,35 @@ OBJ := obj
 
 
 	
-# Command: make testBH
-# Tests the Treap Insert Results
-testBHObjs := $(OBJ)/testBH.o 
+# Command: make SubsetSums
+# Initial Examples of bitsets using Subset Sum problem
+SubsetSumsObjs := $(OBJ)/SubsetSums.o 
 
-testBH: $(testBHObjs)
-	$(PP) $(CXXFLAGS) -o $(EXE)/testBH $(testBHObjs)
-	$(EXE)/./testBH
+SubsetSums: $(SubsetSumsObjs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/SubsetSums $(SubsetSumsObjs)
+	$(EXE)/./SubsetSums
 
-$(OBJ)/testBH.o: $(SRC)/testBH.cpp $(INC)/BinomialHeap.h
-	$(PP) $(CXXFLAGS) -c $(SRC)/testBH.cpp -o $@
-
-
-
-# Command: make testPQ
-# Tests the Treap Insert Results
-testPQObjs := $(OBJ)/testPQ.o 
-
-testPQ: $(testPQObjs)
-	$(PP) $(CXXFLAGS) -o $(EXE)/testPQ $(testPQObjs)
-	$(EXE)/./testPQ
-
-$(OBJ)/testPQ.o: $(SRC)/testPQ.cpp $(INC)/PriorityQueue.h
-	$(PP) $(CXXFLAGS) -c $(SRC)/testPQ.cpp -o $@
+$(OBJ)/SubsetSums.o: $(SRC)/SubsetSums.cpp
+	$(PP) $(CXXFLAGS) -c $(SRC)/SubsetSums.cpp -o $@
 
 
-# Command: make PriorityTest
-# Tests the Treap Insert Results
-PriorityTestObjs := $(OBJ)/PriorityTest.o 
+# Command: make BloomURL
+# Initial Examples of Bloom Filter
+BloomURLObjs := $(OBJ)/BloomURL.o 
 
-PriorityTest: $(PriorityTestObjs)
-	$(PP) $(CXXFLAGS) -o $(EXE)/PriorityTest $(PriorityTestObjs)
-	$(EXE)/./PriorityTest
+BloomURL: $(BloomURLObjs)
+	$(PP) $(CXXFLAGS) -o $(EXE)/BloomURL $(BloomURLObjs)
+	$(EXE)/./BloomURL $(SRC)/Access_URLs.txt $(SRC)/NDCSE_URLs.txt
 
-$(OBJ)/PriorityTest.o: $(SRC)/PriorityTest.cpp $(INC)/PriorityQueue.h
-	$(PP) $(CXXFLAGS) -c $(SRC)/PriorityTest.cpp -o $@
+$(OBJ)/BloomURL.o: $(SRC)/BloomURL.cpp
+	$(PP) $(CXXFLAGS) -c $(SRC)/BloomURL.cpp -o $@
 
 # Initialize 
 initialize:
 	mkdir $(OBJ) $(EXE)
 
 # Make all
-all: testPQ testBH
+all: SubsetSums BloomURL
 
 # Make clean
 clean :
